Cambios del otro día

--- a/cellularTesting/styles/import/main.scss
+++ b/cellularTesting/styles/import/main.scss
@@ -1,36 +1,5 @@
-.navigation {
-  ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    padding-left: 50px;
-    overflow: hidden;
-    background-color: #333333;
-  }
-
-  li {
-    float: left;
-
-    .active {
-      background-color: #333333;
-    }
-  }
-
-  li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 16px;
-    text-decoration: none;
-  }
-
-  li a:hover {
-    background-color: #111111;
-  }
-}
-
-.content {
-  padding: 50px;
+#content {
+  // padding-bottom: 50px;
 }
 
 body {
